[gd_scene load_steps=6 format=2]

[ext_resource path="res://Puzzles/WordGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Puzzles/PuzzleScene.gd" type="Script" id=2]
[ext_resource path="res://Interface/SummaryPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Keyboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/DefinitionPopup.tscn" type="PackedScene" id=5]

[node name="PuzzleScene" type="Node"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 20.0
margin_right = 154.0
margin_bottom = 380.0
custom_constants/separation = 10

[node name="GridContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 308.0
margin_bottom = 308.0

[node name="WordGrid" parent="VBoxContainer/GridContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 308.0
margin_bottom = 308.0

[node name="StartingLine" parent="VBoxContainer/GridContainer/WordGrid" index="0"]
margin_right = 308.0

[node name="Lines" parent="VBoxContainer/GridContainer/WordGrid" index="1"]
margin_right = 308.0

[node name="WordLine0" parent="VBoxContainer/GridContainer/WordGrid/Lines" index="0"]
margin_right = 308.0

[node name="WordLine1" parent="VBoxContainer/GridContainer/WordGrid/Lines" index="1"]
margin_right = 308.0

[node name="WordLine2" parent="VBoxContainer/GridContainer/WordGrid/Lines" index="2"]
margin_right = 308.0

[node name="WordLine3" parent="VBoxContainer/GridContainer/WordGrid/Lines" index="3"]
margin_right = 308.0

[node name="WordLine4" parent="VBoxContainer/GridContainer/WordGrid/Lines" index="4"]
margin_right = 308.0

[node name="ScoreContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 308.0
margin_bottom = 350.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScoreContainer"]
margin_right = 308.0
margin_bottom = 32.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ScoreContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 32 )

[node name="MedalLabel" type="Label" parent="VBoxContainer/ScoreContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 128.0
margin_top = 9.0
margin_right = 128.0
margin_bottom = 23.0

[node name="TotalScore" type="Label" parent="VBoxContainer/ScoreContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 260.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 32 )
text = "0	"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 411.0
margin_right = 154.0
margin_bottom = 48.0

[node name="SaveButton" type="Button" parent="CenterContainer"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 209.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 48 )
text = "Save and Share!"

[node name="Keyboard" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -187.5
margin_top = -167.0
margin_right = 187.5
margin_bottom = -27.0
rect_min_size = Vector2( 375, 130 )

[node name="SummaryPopup" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="DefinitionPopup" parent="." instance=ExtResource( 5 )]

[connection signal="solution_changed" from="VBoxContainer/GridContainer/WordGrid" to="." method="_on_WordGrid_solution_changed"]
[connection signal="pressed" from="CenterContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="backspace" from="Keyboard" to="." method="_on_Keyboard_backspace"]
[connection signal="keypress" from="Keyboard" to="." method="_on_Keyboard_keypress"]

[editable path="VBoxContainer/GridContainer/WordGrid"]
